# py-extrator-binance-backend

./: db_init.py  hash.py  healthcheck.py  main.py  pyproject.toml  requirements.txt  requirements_fixed.txt  setup.sh  template_gatilho.html  teste_tv.py
core/: config.py  exceptions.py  security.py
models/: analytics_schemas.py  auth_schemas.py  db.py  forex_schemas.py  report_schemas.py  tracking_schemas.py  user.py
routers/: admin_router.py  alphavantage.py  alphavantage_router.py  analytics_router.py  auth_router.py  binance.py  binance_router.py  polygon.py  polygon_router.py  reports.py  reports_router.py  tracking_router.py  tradingview.py  tradingview_router.py
services/: alphavantage_service.py  analytics_service.py  binance_service.py  common_service.py  events_service.py  metrics_service.py  polygon_service.py  reports_service.py  tracking_service.py  tradingview_service.py
src/extrator_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
utils/: admin_seed.py  date_utils.py  gatilho_4e9.py
